fix: format code with black and add missing deps for CI

--- a/notebooks/sierra_leone_eda.ipynb
+++ b/notebooks/sierra_leone_eda.ipynb
@@ -19,17 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e606f1a1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:19.103075Z",
+     "iopub.status.busy": "2025-11-11T20:18:19.102796Z",
+     "iopub.status.idle": "2025-11-11T20:18:28.569222Z",
+     "shell.execute_reply": "2025-11-11T20:18:28.567603Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Notebook cwd: c:\\Users\\Y\\solar-challenge-week1\\notebooks\n",
+      "🔍 Notebook cwd: C:\\Users\\Y\\solar-challenge-week1\\notebooks\n",
       "📄 Full file path: C:\\Users\\Y\\solar-challenge-week1\\data\\sierraleone-bumbuna.csv\n",
-      "✅ File exists? True\n",
+      "✅ File exists? True\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ File loaded successfully!\n",
       "Dataset shape: (525600, 18)\n",
       "                     GHI  DNI  DHI  ModA  ModB  Tamb    RH   WS  WSgust  \\\n",
@@ -135,15 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "35a97a3a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:28.571949Z",
+     "iopub.status.busy": "2025-11-11T20:18:28.571767Z",
+     "iopub.status.idle": "2025-11-11T20:18:28.942375Z",
+     "shell.execute_reply": "2025-11-11T20:18:28.941341Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary Statistics (Numeric Columns):\n",
+      "Summary Statistics (Numeric Columns):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                 GHI            DNI            DHI           ModA  \\\n",
       "count  525600.000000  525600.000000  525600.000000  525600.000000   \n",
       "mean      201.957515     116.376337     113.720571     206.643095   \n",
@@ -243,9 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "21a8cddd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:28.944553Z",
+     "iopub.status.busy": "2025-11-11T20:18:28.944397Z",
+     "iopub.status.idle": "2025-11-11T20:18:30.405196Z",
+     "shell.execute_reply": "2025-11-11T20:18:30.404139Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -423,9 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1a28a9ac",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:30.407541Z",
+     "iopub.status.busy": "2025-11-11T20:18:30.407380Z",
+     "iopub.status.idle": "2025-11-11T20:18:30.624913Z",
+     "shell.execute_reply": "2025-11-11T20:18:30.623983Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -435,14 +475,26 @@
       "DNI: Imputed 7586 values with median -0.10\n",
       "DHI: Imputed 2986 values with median -0.10\n",
       "ModA: Imputed 1604 values with median 3.60\n",
-      "ModB: Imputed 2041 values with median 3.40\n",
+      "ModB: Imputed 2041 values with median 3.40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "WS: Imputed 3967 values with median 0.80\n",
       "WSgust: Imputed 3665 values with median 1.60\n",
       "Comments: Imputed 525600 missings with median nan\n",
       "\n",
       "Cleaned shape: (525600, 19) (dropped 0 rows)\n",
       "\n",
-      "Post-Clean Summary (Key Cols):\n",
+      "Post-Clean Summary (Key Cols):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                GHI            DNI            DHI           ModA  \\\n",
       "count  525600.00000  525600.000000  525600.000000  525600.000000   \n",
       "mean      196.44199     104.527217     110.109541     203.054922   \n",
@@ -495,9 +547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "619e2eb9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:30.627216Z",
+     "iopub.status.busy": "2025-11-11T20:18:30.627059Z",
+     "iopub.status.idle": "2025-11-11T20:18:34.645489Z",
+     "shell.execute_reply": "2025-11-11T20:18:34.644291Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -541,9 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c387cdb2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:34.648024Z",
+     "iopub.status.busy": "2025-11-11T20:18:34.647865Z",
+     "iopub.status.idle": "2025-11-11T20:18:40.416616Z",
+     "shell.execute_reply": "2025-11-11T20:18:40.415469Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -704,7 +770,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "03897328",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-11T20:18:40.419263Z",
+     "iopub.status.busy": "2025-11-11T20:18:40.419036Z",
+     "iopub.status.idle": "2025-11-11T20:18:52.634614Z",
+     "shell.execute_reply": "2025-11-11T20:18:52.633247Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -728,7 +801,13 @@
       "0       NaN  \n",
       "1       NaN  \n",
       "2       NaN  \n",
-      "⚠️ No split date cols—check head for 'Date' or similar.\n",
+      "⚠️ No split date cols—check head for 'Date' or similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Index type: <class 'pandas.core.indexes.datetimes.DatetimeIndex'> - Ready for resample!\n",
       "Key cols: ['GHI', 'DNI', 'DHI', 'RH', 'WS', 'WD', 'ModA', 'ModB'] | Temp: Tamb\n",
       "GHI: 2477 outliers, 2477 imputed (median 0.3)\n",
@@ -736,7 +815,13 @@
       "DHI: 2986 outliers, 2986 imputed (median -0.1)\n",
       "RH: 4929 outliers, 4929 imputed (median 85.4)\n",
       "WS: 3967 outliers, 3967 imputed (median 0.8)\n",
-      "WD: 0 outliers, 0 imputed (median 161.5)\n",
+      "WD: 0 outliers, 0 imputed (median 161.5)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ModA: 1604 outliers, 1604 imputed (median 3.6)\n",
       "ModB: 2041 outliers, 2041 imputed (median 3.4)\n",
       "Clean shape: (525600, 18)\n",
@@ -797,7 +882,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GHI diurnal peak at hour 12 (665.1 W/m²)\n",
+      "GHI diurnal peak at hour 12 (665.1 W/m²)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Clean exported.\n"
      ]
     }
