fix: install/format with black and deps for CI green

--- a/notebooks/sierra_leone_eda.ipynb
+++ b/notebooks/sierra_leone_eda.ipynb
@@ -23,10 +23,10 @@
    "id": "e606f1a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:19.103075Z",
-     "iopub.status.busy": "2025-11-11T20:18:19.102796Z",
-     "iopub.status.idle": "2025-11-11T20:18:28.569222Z",
-     "shell.execute_reply": "2025-11-11T20:18:28.567603Z"
+     "iopub.execute_input": "2025-11-11T20:22:36.767734Z",
+     "iopub.status.busy": "2025-11-11T20:22:36.767579Z",
+     "iopub.status.idle": "2025-11-11T20:22:38.968902Z",
+     "shell.execute_reply": "2025-11-11T20:22:38.967536Z"
     }
    },
    "outputs": [
@@ -152,10 +152,10 @@
    "id": "35a97a3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:28.571949Z",
-     "iopub.status.busy": "2025-11-11T20:18:28.571767Z",
-     "iopub.status.idle": "2025-11-11T20:18:28.942375Z",
-     "shell.execute_reply": "2025-11-11T20:18:28.941341Z"
+     "iopub.execute_input": "2025-11-11T20:22:38.970992Z",
+     "iopub.status.busy": "2025-11-11T20:22:38.970821Z",
+     "iopub.status.idle": "2025-11-11T20:22:39.342124Z",
+     "shell.execute_reply": "2025-11-11T20:22:39.340695Z"
     }
    },
    "outputs": [
@@ -273,10 +273,10 @@
    "id": "21a8cddd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:28.944553Z",
-     "iopub.status.busy": "2025-11-11T20:18:28.944397Z",
-     "iopub.status.idle": "2025-11-11T20:18:30.405196Z",
-     "shell.execute_reply": "2025-11-11T20:18:30.404139Z"
+     "iopub.execute_input": "2025-11-11T20:22:39.345318Z",
+     "iopub.status.busy": "2025-11-11T20:22:39.345028Z",
+     "iopub.status.idle": "2025-11-11T20:22:40.939041Z",
+     "shell.execute_reply": "2025-11-11T20:22:40.937139Z"
     }
    },
    "outputs": [
@@ -460,10 +460,10 @@
    "id": "1a28a9ac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:30.407541Z",
-     "iopub.status.busy": "2025-11-11T20:18:30.407380Z",
-     "iopub.status.idle": "2025-11-11T20:18:30.624913Z",
-     "shell.execute_reply": "2025-11-11T20:18:30.623983Z"
+     "iopub.execute_input": "2025-11-11T20:22:40.943960Z",
+     "iopub.status.busy": "2025-11-11T20:22:40.943535Z",
+     "iopub.status.idle": "2025-11-11T20:22:41.192242Z",
+     "shell.execute_reply": "2025-11-11T20:22:41.191653Z"
     }
    },
    "outputs": [
@@ -475,13 +475,7 @@
       "DNI: Imputed 7586 values with median -0.10\n",
       "DHI: Imputed 2986 values with median -0.10\n",
       "ModA: Imputed 1604 values with median 3.60\n",
-      "ModB: Imputed 2041 values with median 3.40\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ModB: Imputed 2041 values with median 3.40\n",
       "WS: Imputed 3967 values with median 0.80\n",
       "WSgust: Imputed 3665 values with median 1.60\n",
       "Comments: Imputed 525600 missings with median nan\n",
@@ -551,10 +545,10 @@
    "id": "619e2eb9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:30.627216Z",
-     "iopub.status.busy": "2025-11-11T20:18:30.627059Z",
-     "iopub.status.idle": "2025-11-11T20:18:34.645489Z",
-     "shell.execute_reply": "2025-11-11T20:18:34.644291Z"
+     "iopub.execute_input": "2025-11-11T20:22:41.194708Z",
+     "iopub.status.busy": "2025-11-11T20:22:41.194491Z",
+     "iopub.status.idle": "2025-11-11T20:22:45.141799Z",
+     "shell.execute_reply": "2025-11-11T20:22:45.140820Z"
     }
    },
    "outputs": [
@@ -604,10 +598,10 @@
    "id": "c387cdb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:34.648024Z",
-     "iopub.status.busy": "2025-11-11T20:18:34.647865Z",
-     "iopub.status.idle": "2025-11-11T20:18:40.416616Z",
-     "shell.execute_reply": "2025-11-11T20:18:40.415469Z"
+     "iopub.execute_input": "2025-11-11T20:22:45.144818Z",
+     "iopub.status.busy": "2025-11-11T20:22:45.144626Z",
+     "iopub.status.idle": "2025-11-11T20:22:50.658481Z",
+     "shell.execute_reply": "2025-11-11T20:22:50.657236Z"
     }
    },
    "outputs": [
@@ -772,10 +766,10 @@
    "id": "03897328",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-11T20:18:40.419263Z",
-     "iopub.status.busy": "2025-11-11T20:18:40.419036Z",
-     "iopub.status.idle": "2025-11-11T20:18:52.634614Z",
-     "shell.execute_reply": "2025-11-11T20:18:52.633247Z"
+     "iopub.execute_input": "2025-11-11T20:22:50.661170Z",
+     "iopub.status.busy": "2025-11-11T20:22:50.660927Z",
+     "iopub.status.idle": "2025-11-11T20:23:01.102021Z",
+     "shell.execute_reply": "2025-11-11T20:23:01.100618Z"
     }
    },
    "outputs": [
@@ -815,13 +809,7 @@
       "DHI: 2986 outliers, 2986 imputed (median -0.1)\n",
       "RH: 4929 outliers, 4929 imputed (median 85.4)\n",
       "WS: 3967 outliers, 3967 imputed (median 0.8)\n",
-      "WD: 0 outliers, 0 imputed (median 161.5)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "WD: 0 outliers, 0 imputed (median 161.5)\n",
       "ModA: 1604 outliers, 1604 imputed (median 3.6)\n",
       "ModB: 2041 outliers, 2041 imputed (median 3.4)\n",
       "Clean shape: (525600, 18)\n",
