feat(compare-countries): complete cross-country EDA with metrics, stats, and plots

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -585,9 +585,9 @@
    "source": [
     "## Key Observations\n",
     "\n",
-    "- **Togo** shows the highest median GHI but also the greatest variability.\n",
-    "- **Benin** appears more stable with lower variability across all metrics.\n",
-    "- **Sierra Leone** has lower median GHI but fewer extreme outliers.\n"
+    "- **Benin** shows the highest average GHI among the three countries.\n",
+    "- **Togo** comes second in average GHI but may still show some variability.\n",
+    "- **Sierra Leone** has the lowest average GHI, with relatively fewer extreme values.\n"
    ]
   },
   {
